8189766: whitebox failure with -Xcheck:jni

Reviewed-by: lfoltan, kbarrett